Setup GitHub Release automation with multi-platform support
- Updated GitHub Actions workflow for automated release creation
- Fixed GitHub repository configuration in electron-builder and UpdateService
- Added release automation scripts (create-release.sh, trigger-release.js)
- Added comprehensive release documentation (RELEASE.md)
- Updated package.json with new release commands
- Configured multi-platform builds (Windows/macOS/Linux)
- Setup automatic asset upload to GitHub Releases

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "deploy:win": "node scripts/deploy.js win",
     "deploy:linux": "node scripts/deploy.js linux",
     "deploy:all": "node scripts/deploy.js all",
+    "release:create": "./scripts/create-release.sh",
+    "release:trigger": "node scripts/trigger-release.js",
+    "release:github": "npm run build:prod && npm run release:create",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
