--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -90,94 +90,74 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
+
     - name: Download all artifacts
       uses: actions/download-artifact@v4
       with:
         path: artifacts
-        
+
+    - name: List downloaded artifacts
+      run: |
+        echo "Downloaded artifacts:"
+        find artifacts -type f -name "*" | head -20
+
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.event.inputs.version || github.ref_name }}
-        release_name: 崔子瑾诱捕器 ${{ github.event.inputs.version || github.ref_name }}
+        name: 崔子瑾诱捕器 ${{ github.event.inputs.version || github.ref_name }}
         body: |
           ## 崔子瑾诱捕器 - 网站访问控制应用
-          
+
           ### 🚀 新功能
           - 网站访问控制和拦截
           - 进程保护和自动重启
           - 密码保护退出机制
           - 跨平台支持 (Windows/macOS/Linux)
-          
+
           ### 📦 安装说明
-          
+
           **Windows:**
-          - 下载 `.exe` 安装程序
+          - 下载 `cuizijin-trap-windows-installer.exe` 安装程序
           - 以管理员身份运行安装
           - 支持开机自启动和进程保护
-          
+
           **macOS:**
-          - 下载 `.dmg` 文件
+          - 下载 `cuizijin-trap-macos-installer.dmg` 文件
           - 拖拽到应用程序文件夹
           - 可能需要在系统偏好设置中允许运行
-          
+
           **Linux:**
-          - 下载 `.AppImage` 文件
+          - 下载 `cuizijin-trap-linux.AppImage` 文件
           - 添加执行权限：`chmod +x *.AppImage`
           - 直接运行，无需安装
-          
+          - 也可选择 `.deb` 或 `.rpm` 包进行系统安装
+
           ### ⚠️ 重要提醒
           - Windows 版本需要管理员权限才能启用完整功能
           - 请妥善保管管理员密码，这是退出应用的唯一方式
           - 生产环境下会启用进程保护功能
-          
+
           ### 🔒 安全特性
           - ✅ 看门狗进程监控
-          - ✅ 自动重启机制  
+          - ✅ 自动重启机制
           - ✅ 密码保护退出
           - ✅ 开机自启动
           - ✅ 防火墙规则配置
           - ✅ 进程隐藏保护
         draft: false
         prerelease: false
-        
-    - name: Upload Windows installer
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: artifacts/windows-build/*.exe
-        asset_name: cuizijin-trap-windows-installer.exe
-        asset_content_type: application/octet-stream
-      continue-on-error: true
-        
-    - name: Upload macOS installer
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: artifacts/macos-build/*.dmg
-        asset_name: cuizijin-trap-macos-installer.dmg
-        asset_content_type: application/octet-stream
-      continue-on-error: true
-        
-    - name: Upload Linux AppImage
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: artifacts/linux-build/*.AppImage
-        asset_name: cuizijin-trap-linux.AppImage
-        asset_content_type: application/octet-stream
-      continue-on-error: true
+        files: |
+          artifacts/windows-build/*.exe
+          artifacts/macos-build/*.dmg
+          artifacts/macos-build/*.zip
+          artifacts/linux-build/*.AppImage
+          artifacts/linux-build/*.deb
+          artifacts/linux-build/*.rpm
