Add build status monitoring and improve release documentation
- Added check-build-status.js script for monitoring GitHub Actions
- Updated package.json with release:status command
- Enhanced RELEASE.md with status checking instructions
- Improved user experience for release management

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "release:create": "./scripts/create-release.sh",
     "release:trigger": "node scripts/trigger-release.js",
     "release:github": "npm run build:prod && npm run release:create",
+    "release:status": "node scripts/check-build-status.js",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
