--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cuizijin-trap",
   "version": "1.0.0",
   "description": "崔子瑾诱捕器 - 网站访问控制应用",
-  "main": "dist/main/index.js",
+  "main": "main/index.js",
   "homepage": "./",
   "author": "开发团队",
   "license": "MIT",
