--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "release:trigger": "node scripts/trigger-release.js",
     "release:github": "npm run build:prod && npm run release:create",
     "release:status": "node scripts/check-build-status.js",
+    "icons:generate": "node scripts/generate-icons-new.js",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
